update editorjs add some plugin, correct align menu to left side by override some class

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,4 +1,40 @@
 .ce-block__content,
 .ce-toolbar__content {
-	max-width: unset;
+	max-width: 1200px;
+}
+
+
+.codex-editor__redactor{
+	padding-bottom: 100px !important;
+}
+
+
+@media (min-width: 651px){
+.codex-editor--narrow .ce-toolbox .ce-popover{ 
+    left: 0 !important;
+    left: auto;
+    left: initial;
+}
+}
+
+@media (min-width: 651px){
+.codex-editor--narrow .ce-settings .ce-popover {
+    left: 0 !important;
+    left: auto;
+    left: initial;
+}
+}
+
+@media (min-width: 651px){
+.codex-editor--narrow .codex-editor__redactor {
+    margin-left: 50px;
+	margin-right: 0%;
+}
+}
+
+@media (min-width: 651px){
+.codex-editor--narrow .ce-toolbar__actions {
+    left: -5px;
+	right: inherit;
+}
 }
